--- a/employee_register/templates/employee_register/employee_list.html
+++ b/employee_register/templates/employee_register/employee_list.html
@@ -7,6 +7,11 @@
             <td>Full Name</td>
             <td>Mobile</td>
             <td>Position</td>
+            <td>
+                <a href="{% url 'employee_insert' %}" class="btn btn-outline-success">
+                    <i class="fas fa-plus">Add new</i>
+                </a>
+            </td>
         </tr>
     </thead>
     <tbody>
@@ -15,6 +20,19 @@
             <td>{{employee.fullname}}</td>
             <td>{{employee.mobile}}</td>
             <td>{{employee.position}}</td>
+            <td>
+                <a href="{% url 'employee_update' employee.id %}" class="btn text-secondary-px-0">\
+                    <i class="far fa-edit fa-lg"></i>
+                </a>
+                <form action="{% url 'employee_delete' employee.id %}"method="post" class="d-inline">
+                    {% csrf_token %}
+                    <button type="submit" class="btn">
+                        <i class="far fa-trash-alt fa-lg text-danger float-right">
+
+                        </i>
+                    </button>
+                </form>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
